--- a/helloweb/src/main/webapp/META-INF/maven/com.douzone/helloweb/pom.xml
+++ b/helloweb/src/main/webapp/META-INF/maven/com.douzone/helloweb/pom.xml
@@ -16,9 +16,31 @@
 	</properties>
 
 	<dependencies>
+		<!-- MariaDB JDBC Driver -->
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>2.4.4</version>
+		</dependency>
+
+		<!-- Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.0</version>
+			<scope>provided</scope>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
+		<finalName>helloweb</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<resources>
 			<resource>
