--- a/emaillist01/pom.xml
+++ b/emaillist01/pom.xml
@@ -9,6 +9,11 @@
   <packaging>war</packaging>
   
   <dependencies>
+	  <dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>2.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
