--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
   	<module>helloweb</module>
   	<module>emaillist01</module>
   	<module>gkaslka</module>
+  	<module>guestbook01</module>
   </modules>
   
   
