--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
   	<module>emaillist01</module>
   	<module>gkaslka</module>
   	<module>guestbook01</module>
+  	<module>emaillist02</module>
   </modules>
   
   
