--- a/guestbook01/pom.xml
+++ b/guestbook01/pom.xml
@@ -26,7 +26,7 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://127.0.0.1:8088/manager/text</url>
-					<path>/bookguest01</path>
+					<path>/guestbook01</path>
 					<username>admin</username>
 					<password>manager</password>
 				</configuration>
