--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
   	<module>gkaslka</module>
   	<module>guestbook01</module>
   	<module>emaillist02</module>
+  	<module>guestbook02</module>
   </modules>
   
   
